--- a/kosmo.css
+++ b/kosmo.css
@@ -54,6 +54,16 @@ a:hover {
     font-size: 0.9em;
 }
 
+.resume-page blockquote {
+    margin-left: 20px;
+    padding-left: 15px;
+    border-left: 3px solid #2c3e50;
+}
+
+.resume-page blockquote p {
+    margin: 5px 0;
+}
+
 /* Kosmo Technologies page styles */
 .kosmo-page {
     background-color: #1a1a2e;
