--- a/styles.css
+++ b/styles.css
@@ -78,12 +78,15 @@ main {
 
 .dessert-card:hover {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transform: translateY(-2px);
 }
 
-.dessert-image {
+.dessert-image{
     width: 100%;
-    height: 200px;
+    height: 300px;
     object-fit: cover;
+    /* transform: scale(1.05);
+    transition: transform 0.3s ease; */
 }
 
 .dessert-info {
