--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@ body {
     margin: 0;
     padding: 0;
     /* background-color: #f8f3e6; */
-    color: #5d4037;
+
 }
 
 nav {
-    background-color: #8d6e63;
+
     padding: 1rem;
 }
 
@@ -80,7 +80,7 @@ main {
     transform: translateY(-2px);
 }
 
-.dessert-image{
+.dessert-image {
     width: 100%;
     height: 300px;
     object-fit: cover;
@@ -132,8 +132,10 @@ nav {
 }
 
 footer {
-    background-color: #8d6e63; /* Match the nav background */
-    color: #f8f3e6; /* Light text color */
+    background-color: #8d6e63;
+    /* Match the nav background */
+    color: #f8f3e6;
+    /* Light text color */
     text-align: center;
     padding: 1rem 0;
     position: relative;
